--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.73" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.74" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.73" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.73" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.73" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.74" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.74" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.74" media="screen" />
   </head>
 
   <body>
@@ -124,7 +124,7 @@
             The Daily Facet
             <badge :class="{show: getDailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
           </button>
-          <button class="inline small" @click="HandleNewGameClick()">
+          <button class="inline small" @click="HandleNewGameClick">
             <icon class="empty"></icon>
             Create your own
             <icon class="empty"></icon>
@@ -150,7 +150,7 @@
         <p class="pointer-text" v-html="pointerText"></p>
         <p class="controls">
           <a v-if="(isPlayerGuessing && appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length - 1) || (isPlayerCreating && appStateFirstRunCreatingIndex < appDataCreatorFirstRunItems.length - 1) || (isPlayerReviewing && appStateFirstRunReviewingIndex < appDataReviewingFirstRunItems.length - 1)"
-            @click="appStateFirstRunGuessingIndex = appDataGuessingFirstRunItems.length; appStateFirstRunCreatingIndex = appDataCreatorFirstRunItems.length">Stop
+            @click="EndAllFirstRunTips">Stop
             showing tips</a>
 
           <a class="right"
@@ -237,7 +237,7 @@
             placeholder="_ _ _ _ _ _ _ _ _ _ _ _ _" v-model="tempName" />
           <checkbox v-if="isNotificationSupported && isSyncSupported && isPWAOnHomeScreen"
             :class="{on: tempUserWantsDailyReminder && Notification.permission === 'granted', disabled: !Notification.permission === 'granted'}"
-            @click="ToggleTempUserWantsDailyReminder()">
+            @click="ToggleTempUserWantsDailyReminder">
             Allow notifications
             <toggle></toggle>
           </checkbox>
@@ -279,7 +279,7 @@
           <a class="padded" href="https://github.com/wilvoss/facets/issues" target="_blank">Submit a bug!</a>
           <h3></h3>
           <version>
-            <span>&copy;{{new Date().getFullYear()}} Big Tent Games</span>
+            <span>&copy;{{currentYear}} Big Tent Games</span>
             <span><a href="https://bigtentgames.com/#privacy" target="_blank">Privacy Policy</a></span>
             <span>Version {{appDataVersion}}</span>
           </version>
@@ -304,7 +304,7 @@
           </leftright>
           <h3>Difficulty</h3>
           <checkbox title="Enable this to make your puzzle much harder to solve!" :class="{on: tempUseExtraCard}"
-            @click="ToggleTempUseExtraCard()">
+            @click="ToggleTempUseExtraCard">
             Make it crazy hard
             <toggle></toggle>
           </checkbox>
@@ -322,8 +322,8 @@
           <leftright>
             <p>Player name</p>
             <callout>
-              <input autocomplete="off" spellcheck="false" maxlength="14" placeholder="_ _ _ _ _ _"
-                onpointerup="this.select()" v-model="tempName" />
+              <input autocomplete="off" spellcheck="false" maxlength="14" placeholder="" onpointerup="this.select()"
+                v-model="tempName" />
             </callout>
           </leftright>
           <leftright>
@@ -334,39 +334,39 @@
                 maxlength="8" />
             </callout>
           </leftright>
-          <small class="alertText" v-if="tempID.toString().length < 8 || tempID.toString().indexOf('0') === 0">Your ID
+          <small class="alertText" v-if="tempIDisInvalid">Your ID
             must be 8 - 12 numbers long and not begin with 0.</small>
           <small>To avoid connection issues when sharing game stats across different devices, ensure this Player ID
             matches
             on all your browsers. Write this ID down before changing it.</small>
           <h3>Appearance</h3>
           <checkbox v-if="!appStateUseFlower" :class="{on: tempUserSettingsUsesLightTheme}"
-            @click="ToggleTempUseLightTheme()">
+            @click="ToggleTempUseLightTheme">
             Light theme <toggle></toggle>
           </checkbox>
           <small v-if="!appStateUseFlower">Enable this if you want a brighter, lighter visual experience.</small>
-          <checkbox :class="{on: !tempUseWordSetThemes}" @click="ToggleTempUseWordSetThemes()">
+          <checkbox :class="{on: !tempUseWordSetThemes}" @click="ToggleTempUseWordSetThemes">
             Hide backgrounds <toggle></toggle>
           </checkbox>
           <small>Enable this to hide category related backgrounds.</small>
 
-          <checkbox :class="{on: tempUserSettingsUsesSimplifiedTheme}" @click="ToggleTempUseSimplifiedTheme()">
+          <checkbox :class="{on: tempUserSettingsUsesSimplifiedTheme}" @click="ToggleTempUseSimplifiedTheme">
             Simple visuals <toggle></toggle>
           </checkbox>
           <small>Enable this if you want remove the gem theme entirely. </small>
-          <checkbox :class="{on: tempUserSettingsHideStats}" @click="ToggleTempHideStats()">
+          <checkbox :class="{on: tempUserSettingsHideStats}" @click="ToggleTempHideStats">
             Hide stats <toggle></toggle>
           </checkbox>
           <small>Enable this if you don't want to see statistics associated with the Daily Facet.</small>
           <checkbox
             :class="{disabled: tempUserSettingsUsesSimplifiedTheme, on: !tempUseMultiColoredGems && !tempUserSettingsUsesSimplifiedTheme}"
-            @click="ToggleTempUseMultiColoredGems()">
+            @click="ToggleTempUseMultiColoredGems">
             Monocolored gem <toggle></toggle>
           </checkbox>
           <small :class="{disabled: tempUserSettingsUsesSimplifiedTheme}">Enable this if you want the gem to remain
             green when you are creating, guessing, or reviewing.</small>
           <checkbox v-if="appStateUsePortraitLayout" :class="{on: !tempUserSettingsShowAllCards}"
-            @click="ToggleTempShowAllCards()">
+            @click="ToggleTempShowAllCards">
             Make "parked" cards bigger <toggle></toggle>
           </checkbox>
           <small v-if="appStateUsePortraitLayout">Enable this if you want to increase the size of the unused cards when
@@ -374,7 +374,7 @@
           </small>
           <!-- <checkbox v-if="isNotificationSupported && isSyncSupported && appStateUseNotifications"
             :class="{on: tempUserWantsDailyReminder, disabled: Notification.permission === 'denied'}"
-            @click="ToggleTempUserWantsDailyReminder()">
+            @click="ToggleTempUserWantsDailyReminder">
             Notifications
             <toggle></toggle>
           </checkbox>
@@ -410,15 +410,13 @@
           <small>Tap this to restore the game guiding tips.</small>
 
           <leftright>
-            <a class="padded" @click="window.location.reload()">Version {{appDataVersion}}</a>
+            <a class="padded" @click="ReloadApp">Version {{appDataVersion}}</a>
           </leftright>
           <small>Tap this to be sure that you have the latest version.</small>
         </section>
         <controls>
           <button class="secondary" @click="CancelSettings(event)">Cancel</button>
-          <button :disabled="tempID.toString().length < 8 || tempID.toString().indexOf('0') === 0"
-            title="Please only use numbers."
-            :class="{disabled: tempID.toString().length < 8 || tempID.toString().indexOf('0') === 0}"
+          <button :disabled="tempIDisInvalid" title="Please only use numbers." :class="{disabled: tempIDisInvalid}"
             @click="SubmitSettings(event)">Save</button>
         </controls>
       </modal>
@@ -429,7 +427,7 @@
 
           <leftright style="margin: 20px 0">
             <a class="padded" :class="{disabled: appStateIsGettingLast10Games}"
-              @click="GetLast10GlobalCreatedGames();">Refresh</a>
+              @click="GetLast10GlobalCreatedGames;">Refresh</a>
             <a class="padded" @click="window.open('/game/stats.html', '_blank')">Global Stats</a>
           </leftright>
 
@@ -440,7 +438,7 @@
             <p>😢</p>
             <p>There are no player puzzles to display.</p>
             <button style="margin-top: 20px; border: 1px solid hsla(var(--linkColorDarkHSL), 0.75)"
-              @click="ToggleShowGlobalCreated(); HandleNewGameClick()">Create One!</button>
+              @click="ToggleShowGlobalCreated; HandleNewGameClick">Create One!</button>
           </message>
 
           <gamelinks>
@@ -609,7 +607,7 @@
           <button id="shareButton" class="inline" :class="{pointout: (appStateFirstRunReviewingIndex === 2 &&
             isPlayerReviewing) || (appStateFirstRunGuessingIndex === 4 &&
             isPlayerGuessing) || (appStateFirstRunCreatingIndex === 4 && isPlayerCreating)}"
-            @click="HandleSubmitButtonPress()">
+            @click="HandleSubmitButtonPress">
             <icon :class="{show: appStateIsGettingTinyURL}" class="spinner"></icon>
             <span v-if="!appStateIsGettingTinyURL" v-html="getSubmitButtonText"></span>
           </button>
@@ -651,7 +649,7 @@
                 <icon class="rotate"></icon>
               </button>
             </rotators>
-            <card @click="HandleCardClick(event, card)" @pointerup="HandleCardPointerUp(event, card)"
+            <card @click="HandleCardClick(event, card)" @pointerup="HandleCardPointerUp(event, card, 'parking')"
               @pointerdown="HandleCardPointerDown(event, card)" :style="{rotate: (card.rotation * 90) + 'deg'}"
               :class="{rotating: card.isRotating, selected: card.isSelected, dropped: card.justDropped}">
               <words>
@@ -728,7 +726,7 @@
                 <icon class="rotate"></icon>
               </button>
             </rotators>
-            <card @click="HandleCardClick(event, card)" @pointerup="HandleCardPointerUp(event, card)"
+            <card @click="HandleCardClick(event, card)" @pointerup="HandleCardPointerUp(event, card, 'parking')"
               @pointerdown="HandleCardPointerDown(event, card)" :style="{rotate: (card.rotation * 90) + 'deg'}"
               :class="{rotating: card.isRotating, selected: card.isSelected, dropped: card.justDropped}">
               <words>
@@ -764,8 +762,8 @@
                 <icon class="rotate"></icon>
               </button>
             </rotators>
-            <card @pointerup="HandleCardPointerUp(event, card)" @pointerdown="HandleCardPointerDown(event, card)"
-              :style="{rotate: (card.rotation * 90) + 'deg'}"
+            <card @pointerup="HandleCardPointerUp(event, card, 'parking')"
+              @pointerdown="HandleCardPointerDown(event, card)" :style="{rotate: (card.rotation * 90) + 'deg'}"
               :class="{rotating: card.isRotating, selected: card.isSelected, dropped: card.justDropped}">
               <words>
                 <word v-for="word in card.words">{{word.value}}</word>
@@ -788,15 +786,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.73" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.73" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.73" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.73" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.73" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.73" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.73" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.74" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.74" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.74" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.74" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.74" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.74" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.74" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.73" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.74" type="text/javascript"></script>
   </body>
 
 </html>
