--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.75" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.76" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.75" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.75" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.75" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.76" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.76" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.76" media="screen" />
   </head>
 
   <body>
@@ -153,8 +153,7 @@
             @click="EndAllFirstRunTips">Stop
             showing tips</a>
 
-          <a class="right"
-            v-if="isPlayerCreating || isPlayerReviewing || (isPlayerGuessing && appStateFirstRunGuessingIndex !== 0)">{{tipSubmitText}}</a>
+          <a class="right" v-if="isPlayerCreating || isPlayerReviewing || isPlayerGuessing">{{tipSubmitText}}</a>
         </p>
       </pointer>
       <arrow :class="{hidden: hidePointer, inplay: pointerInPlay}"
@@ -569,7 +568,7 @@
           </gamelinks>
 
           <controls>
-            <button @click="appStateShowDailyGames = false">Done</button>
+            <button @click="appStateShowDailyGames = false">Back</button>
           </controls>
         </section>
       </modal>
@@ -602,10 +601,10 @@
             :class="{show: !appStateShowNotification && vsShowDaily && getDailyIsFreshToday && appStateShowMeta, blink: appStateFirstRunGuessingIndex === -1}">Solve
             Today's Facet!</button>
         </header>
-        <controls :class="{disabled: getActionButtonState, pointoutparent: (appStateFirstRunGuessingIndex === 4 &&
+        <controls :class="{disabled: getActionButtonState, pointoutparent: (appStateFirstRunGuessingIndex === 5 &&
           isPlayerGuessing) || (appStateFirstRunCreatingIndex === 4 && isPlayerCreating)}">
           <button id="shareButton" class="inline" :class="{pointout: (appStateFirstRunReviewingIndex === 2 &&
-            isPlayerReviewing) || (appStateFirstRunGuessingIndex === 4 &&
+            isPlayerReviewing) || (appStateFirstRunGuessingIndex === 5 &&
             isPlayerGuessing) || (appStateFirstRunCreatingIndex === 4 && isPlayerCreating)}"
             @click="HandleSubmitButtonPress">
             <icon :class="{show: appStateIsGettingTinyURL}" class="spinner"></icon>
@@ -614,12 +613,13 @@
         </controls>
       </wrapper>
       <wrapper class="main" :class="{disabled: appStateSolving}">
-        <rotators style="width: calc(3.25 * var(--cardSize))">
+        <rotators style="width: calc(3.25 * var(--cardSize))" :class="{pointoutparent: appStateFirstRunGuessingIndex === 4 &&
+          isPlayerGuessing || appStateFirstRunCreatingIndex === 3 && isPlayerCreating}">
           <button aria-label="Rotate Tray Clockwise" class="clockwise" @click="RotateTray(1)">
             <icon class="rotate"></icon>
           </button>
           <button aria-label="Rotate Tray Anti-Clockwise" class="anticlockwise" @click="RotateTray(-1)">
-            <icon :class="{pointout: appStateFirstRunGuessingIndex === 3 &&
+            <icon :class="{pointout: appStateFirstRunGuessingIndex === 4 &&
               isPlayerGuessing || appStateFirstRunCreatingIndex === 3 && isPlayerCreating}" class="rotate"></icon>
           </button>
         </rotators>
@@ -639,7 +639,7 @@
         <parking v-if="!appStateUsePortraitLayout"
           :class="{pointout: (isPlayerCreating && appStateFirstRunCreatingIndex === 5)}">
           <spot v-for="(card, index) in appDataCardsParked" v-if="index < (currentGameGuessingCardCount / 2)"
-            :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: index === 0 && ((card.words.length !== 0 && isPlayerGuessing && appStateFirstRunGuessingIndex === 0  && !appStateIsDragging) || (isPlayerReviewing && appStateFirstRunReviewingIndex === 1))}">
+            :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: ((card.words.length !== 0 && isPlayerGuessing && appStateFirstRunGuessingIndex === 2 && !appStateIsDragging) || (isPlayerReviewing && appStateFirstRunReviewingIndex === 1))}">
             <rotators>
               <button aria-label="Rotate Tray Clockwise" class="clockwise" @pointerdown="RotateCard(event, card, 1)">
                 <icon class="rotate"></icon>
@@ -670,21 +670,20 @@
         <tray id="tray" :class="{rotating: appStateTrayIsRotating}"
           :style=" {rotate: appStateTrayRotation * 90 + 'deg' }">
           <diamond class="back"></diamond>
-          <diamond :class="{pointout: (appStateFirstRunReviewingIndex === 0 && isPlayerReviewing) ||(appStateFirstRunCreatingIndex === 2 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 2 &&
-            isPlayerGuessing)}"></diamond>
+          <diamond></diamond>
           <hints>
             <hint @pointerdown=" RotateTrayBasedOnInputFocus(index)" :id="'h' + index"
-              v-for="(hint, index) in appDataHints" :key="index"
-              :class="{pointout: (appStateFirstRunCreatingIndex === 2 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 2 && isPlayerGuessing)}">
+              v-for="(hint, index) in appDataHints" :key="index">
               <input autocomplete="off" autocapitalize="off" autocomplete="off" spellcheck="false" :id="'hint' + index"
                 type="text" title="Please only use alphanumeric characters." pattern="[A-Za-z0-9]*"
+                :class="{pointout: index === 0 && ((appStateFirstRunCreatingIndex === 2 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 1 && isPlayerGuessing))}"
                 :disabled="appStateIsGuessing || index > 0" v-model="hint.value" maxlength="14" type="text"
                 placeholder="clue" />
             </hint>
           </hints>
           <cards :class="{disabled: appStateIsModalShowing}">
             <spot v-for="(card, index) in appDataCards" v-if="!card.isExtra"
-              :class="{wrong: card.failedCheckAlready && !card.isRotating, empty: card.words.length === 0, selected: card.isSelected, pointout: (appStateIsGuessing && appStateFirstRunGuessingIndex === 1 && card.words.length > 0) || (appStateFirstRunCreatingIndex === 1 && isPlayerCreating)}">
+              :class="{wrong: card.failedCheckAlready && !card.isRotating, empty: card.words.length === 0, selected: card.isSelected, pointout: (appStateIsGuessing && appStateFirstRunGuessingIndex === 3 && card.words.length > 0) || (appStateFirstRunCreatingIndex === 1 && isPlayerCreating), pointadjacent: (isPlayerCreating && appStateFirstRunCreatingIndex === 5)}">
               <rotators v-if="appStateIsGuessing && currentGameSolutionGuessing !== currentGameSolutionActual">
                 <button aria-label="Rotate Tray Clockwise" class="clockwise" @click="RotateCard(event, card, 1)">
                   <icon class="rotate"></icon>
@@ -698,7 +697,9 @@
                 @pointerdown="HandleCardPointerDown(event, card)" :style="{rotate: (card.rotation * 90) + 'deg'}"
                 :class="{rotating: card.isRotating, selected: card.isSelected, dropped: card.justDropped}">
                 <words>
-                  <word v-for="(word, windex) in card.words" :id="'word' + windex">{{word.value}}</word>
+                  <word
+                    :class="{pointout: appStateFirstRunCreatingIndex === 2 && isPlayerCreating && windex === 0 && (index === 0 || index === 1)}"
+                    v-for="(word, windex) in card.words" :id="'word' + windex">{{word.value}}</word>
                 </words>
               </card>
               <rotators v-if="appStateIsGuessing && currentGameSolutionGuessing !== currentGameSolutionActual">
@@ -716,7 +717,7 @@
         <parking v-if="!appStateUsePortraitLayout">
           <spot v-for="(card, index) in appDataCardsParked"
             v-if="index >= (currentGameGuessingCardCount / 2) && (index < currentGameGuessingCardCount)"
-            :class="{empty: card.words.length === 0, selected: card.isSelected}">
+            :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: ((card.words.length !== 0 && isPlayerGuessing && appStateFirstRunGuessingIndex === 2 && !appStateIsDragging) || (isPlayerReviewing && appStateFirstRunReviewingIndex === 1))}">
             <rotators>
               <button aria-label="Rotate Tray Clockwise" class="clockwise" @click="RotateCard(event, card, 1)">
                 <icon class="rotate"></icon>
@@ -752,7 +753,7 @@
         </button>
         <parking id="parking">
           <spot v-for="(card, index) in appDataCardsParked" v-if="index < currentGameGuessingCardCount"
-            :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: (appStateIsGuessing && !appStateIsDragging && appStateFirstRunGuessingIndex === 0 && card.words.length !== 0) || (isPlayerCreating && appStateFirstRunCreatingIndex === 5) || (isPlayerReviewing && appStateFirstRunReviewingIndex === 1)}">
+            :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: (isPlayerGuessing && !appStateIsDragging && appStateFirstRunGuessingIndex === 2 && card.words.length !== 0) || (isPlayerCreating && appStateFirstRunCreatingIndex === 5) || (isPlayerReviewing && !appStateIsDragging && appStateFirstRunReviewingIndex === 1)}">
             <rotators v-if="!userSettingsShowAllCards">
               <button aria-label="Rotate Tray Clockwise" class="clockwise" @pointerdown="RotateCard(event, card, 1)">
                 <icon class="rotate"></icon>
@@ -786,15 +787,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.75" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.75" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.75" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.75" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.75" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.75" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.75" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.76" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.76" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.76" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.76" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.76" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.76" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.76" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.75" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.76" type="text/javascript"></script>
   </body>
 
 </html>
