--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.76" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.77" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.76" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.76" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.76" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.77" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.77" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.77" media="screen" />
   </head>
 
   <body>
@@ -131,18 +131,14 @@
           </button>
           <!-- <button class="small" @click="ToggleShowGlobalCreated(event)">Player puzzles</button> -->
           <button class="small" @click="ToggleShowTutorial(event)">How to play</button>
-          <!-- <leftright> -->
           <button class="small" @click="ShowSettings(event)">Settings</button>
           <button class="small isolated" style="bottom: 10px; right: 0px; " @click="ToggleShowInfo(event)">
             <icon class="meeples"></icon>
           </button>
-          <!-- </leftright> -->
-          <!-- <leftright> -->
           <button class="small highlightText" @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
             <icon class="bmc small highlightBackground"></icon>
             Buy me a coffee!
           </button>
-          <!-- </leftright> -->
         </subtitle>
       </notification>
       <pointer :class="{hidden: hidePointer, inplay: pointerInPlay}"
@@ -152,8 +148,11 @@
           <a v-if="(isPlayerGuessing && appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length - 1) || (isPlayerCreating && appStateFirstRunCreatingIndex < appDataCreatorFirstRunItems.length - 1) || (isPlayerReviewing && appStateFirstRunReviewingIndex < appDataReviewingFirstRunItems.length - 1)"
             @click="EndAllFirstRunTips">Stop
             showing tips</a>
-
-          <a class="right" v-if="isPlayerCreating || isPlayerReviewing || isPlayerGuessing">{{tipSubmitText}}</a>
+          <seekers>
+            <a v-if="(isPlayerGuessing && appStateFirstRunGuessingIndex > 0) || (isPlayerCreating && appStateFirstRunCreatingIndex > 0) || (isPlayerReviewing && appStateFirstRunReviewingIndex > 0)"
+              @pointerup="HandlePreviousTipButtonPointerUp(event)" class="right">Back</a>
+            <a @pointerup="HandleAdvanceTipButtonPointerUp(event)" class="right">{{tipSubmitText}}</a>
+          </seekers>
         </p>
       </pointer>
       <arrow :class="{hidden: hidePointer, inplay: pointerInPlay}"
@@ -461,7 +460,7 @@
       <modal v-if="appStateShowDailyGames">
         <section>
           <h2>The Daily Facet</h2>
-          <p>These AI generated puzzles can be quite hard. If you solve one, challenge your friends to do better!</p>
+          <p>These AI puzzles can be quite hard. Can you do solve them faster than your friends?</p>
           <small v-if="!userSettingsHideStats" class="statlabel" style="margin-top: var(--defaultGap)"> You've solved
             {{appDataPlayerStats.total}}
             {{appDataPlayerStats.total === 1 ? 'Daily Facet' :  'Daily Facets' }} </small>
@@ -491,7 +490,6 @@
               <small>quit</small>
             </stat>
           </stats>
-
           <icon v-show="appStateIsGettingDailyGames " style="position: relative" class="spinner show"></icon>
           <message style="padding: calc(2 * var(--defaultGap)) 0"
             v-if="!appStateIsGettingDailyGames && getDailyGamesWithWordSetNames.length === 0">
@@ -499,6 +497,7 @@
             <p v-if="!Navigator.online">You appear to be offline. 😢</p>
             <button v-if="!Navigator.online" @click="GetDailyGames">Retry</button>
           </message>
+
           <gamelinks v-if="!appStateIsGettingDailyGames">
             <gamelink :class="{done: game.solved, quit: game.quit}"
               v-for="(game, index) in getDailyGamesWithWordSetNames">
@@ -513,9 +512,9 @@
                   </small>
                   <clues> {{game.hints.replace(/:/g," - ")}} </clues>
                 </a>
-                <button v-if="game.guesses === 0" class="inline report">
-                  PLAY
-                  <icon class="play"></icon>
+                <button v-if="game.guesses === 0" class="inline report"
+                  style="justify-content: end; padding-left: 40px; padding-right: 0px;">
+                  <icon class="continue"></icon>
                 </button>
                 <button v-if="game.solved && game.guesses > 0 && !game.quit" class="inline report">
                   <icon class="check"></icon>
@@ -557,18 +556,18 @@
                   </value>
                   <small>tries avg</small>
                 </stat>
-                <stat>
+                <!-- <stat>
                   <value>
                     {{!appStateIsGettingDailyGameStats && game.stats && game.stats.guesscounts.quits ? game.stats.guesscounts.quits : '-'}}
                   </value>
                   <small>quit</small>
-                </stat>
+                </stat> -->
               </stats>
             </gamelink>
           </gamelinks>
 
           <controls>
-            <button @click="appStateShowDailyGames = false">Back</button>
+            <button class="secondary" @click="appStateShowDailyGames = false">Back</button>
           </controls>
         </section>
       </modal>
@@ -787,15 +786,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.76" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.76" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.76" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.76" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.76" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.76" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.76" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.77" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.77" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.77" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.77" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.77" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.77" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.77" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.76" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.77" type="text/javascript"></script>
   </body>
 
 </html>
