--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.77" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.78" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.77" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.77" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.77" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.78" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.78" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.78" media="screen" />
   </head>
 
   <body>
@@ -556,12 +556,12 @@
                   </value>
                   <small>tries avg</small>
                 </stat>
-                <!-- <stat>
+                <stat>
                   <value>
                     {{!appStateIsGettingDailyGameStats && game.stats && game.stats.guesscounts.quits ? game.stats.guesscounts.quits : '-'}}
                   </value>
                   <small>quit</small>
-                </stat> -->
+                </stat>
               </stats>
             </gamelink>
           </gamelinks>
@@ -786,15 +786,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.77" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.77" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.77" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.77" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.77" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.77" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.77" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.78" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.78" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.78" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.78" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.78" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.78" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.78" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.77" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.78" type="text/javascript"></script>
   </body>
 
 </html>
